--- a/rest_framework_docs/templates/rest_framework_docs/home.html
+++ b/rest_framework_docs/templates/rest_framework_docs/home.html
@@ -1,4 +1,4 @@
-{% extends "rest_framework_docs/docs.html" %}
+{% extends base_template %}
 
 {% block apps_menu %}
 {% regroup endpoints by name_parent as endpoints_grouped %}
@@ -56,7 +56,7 @@
         <div id="{{ endpoint.path|slugify }}" class="panel-collapse collapse" role="tabpanel">
           <div class="panel-body">
             {% if endpoint.docstring %}
-            <p class="lead">{{ endpoint.docstring }}</p>
+            <p class="lead">{{ endpoint.docstring|linebreaks }}</p>
             {% endif %}
 
             {% if endpoint.errors %}
